# npbench

./: README.md  npbench.db  npbench_2070.db  plot_barplot.py  plot_grid.py  plot_roofline.py  pyproject.toml  requirements-frozen.txt  requirements.txt  run_all.py  run_benchmark.py  run_framework.py  run_triton_benchmarks.sh
.github/workflows/: tests.yml
bench_info/: arc_distance.json  hdiff.json  vadv.json
npbench/benchmarks/azimint_hist/: azimint_hist.py  azimint_hist_triton.py
npbench/benchmarks/azimint_naive/: azimint_naive_triton.py
npbench/benchmarks/channel_flow/: channel_flow_triton.py
npbench/benchmarks/compute/: compute_triton.py
npbench/benchmarks/contour_integral/: contour_integral.py  contour_integral_triton.py
npbench/benchmarks/crc16/: crc16_triton.py
npbench/benchmarks/deep_learning/conv2d_bias/: conv2d.py  conv2d_triton.py
npbench/benchmarks/deep_learning/lenet/: lenet_triton.py
npbench/benchmarks/deep_learning/mlp/: mlp_triton.py
npbench/benchmarks/deep_learning/resnet/: resnet.py
npbench/benchmarks/deep_learning/softmax/: softmax_triton.py
npbench/benchmarks/go_fast/: go_fast.py  go_fast_triton.py
npbench/benchmarks/mandelbrot1/: mandelbrot1_numpy.py  mandelbrot1_triton.py
npbench/benchmarks/mandelbrot2/: mandelbrot2_triton.py
npbench/benchmarks/nbody/: nbody_triton.py
npbench/benchmarks/polybench/adi/: adi_dace.py  adi_triton.py
npbench/benchmarks/spmv/: spmv.py
npbench/infrastructure/: dace_framework.py  framework.py  test.py  triton_framework.py  triton_utilities.py
(+35 files in other folders)
