[project]
name = "npbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x==13.6.0",
    "dace",
    "jax[cuda12]==0.7.1",
    "matplotlib==3.10.7",
    "numba-cuda[cu12]==0.21.2",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pygount==3.1.0",
    "scipy==1.16.3",
    "torch==2.9.1",
    "triton==3.5.1",
]

[tool.uv.sources]
dace = { git = "https://github.com/spcl/dace.git", rev = "7f0fc9114dad049ebc5776d036f7110efffaaf85" }
