[project]
name = "npbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda13x==13.6.0",
    "dace",
    "jax[cuda13]==0.8.1",
    "matplotlib==3.10.7",
    "numba-cuda[cu13]==0.21.2",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pygount==3.1.0",
    "scipy==1.16.3",
    "torch==2.9.1",
    "triton==3.5.1",
    "markupsafe==2.1.3",
]

[tool.uv.sources]
dace = { git = "https://github.com/zero9178/dace.git", rev = "252024130001226a155e867ac822a094bebd3ce4" }
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
explicit = true
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
